fix gap error on intern page

--- a/src/styles/intern.css
+++ b/src/styles/intern.css
@@ -308,13 +308,14 @@
   width: 100vw;
   height: auto;
   position: absolute;
-  top: 365%;
+  bottom: -25%;
   left: 50%;
   transform: translateX(-50%); 
   z-index: -1;
 }
 .intern-btm-three {
   width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
